# aixcc-afc-atlantis

./: .gitignore  LICENSE  README.md
example-crs-appendix/pcb/: .env.example  .gitignore  README.md  pyproject.toml
example-crs-appendix/pcb/projects/binutils/: Dockerfile  build.sh  project.yaml
example-crs-appendix/pcb/projects/libexpat/: Dockerfile  build.sh  fuzz_xml_parser.cc  project.yaml  xml.dict  xml_UTF_16.dict  xml_UTF_16BE.dict  xml_UTF_16LE.dict
example-crs-appendix/pcb/projects/mongoose/: Dockerfile  build.sh  fuzz.options  project.yaml
example-crs-appendix/pcb/projects/mosquitto/: Dockerfile  build.sh  project.yaml
example-crs-appendix/pcb/projects/php/: Dockerfile  build.sh  php-fuzz-execute.options  project.yaml
example-crs-appendix/pcb/projects/sleuthkit/: Dockerfile  build.sh  project.yaml  sleuthkit_fls_apfs_fuzzer.cc  sleuthkit_fls_fuzzer.cc  sleuthkit_fls_ntfs_fuzzer.options  sleuthkit_mem_img.h  sleuthkit_mmls_fuzzer.cc
example-crs-appendix/pcb/projects/swftools/: Dockerfile  build.sh  fuzz_swfdump.c  fuzz_swfdump.h  fuzz_swfdump.options  project.yaml
example-crs-appendix/pcb/projects/wireshark/: Dockerfile  build.sh  project.yaml
example-crs-appendix/pcb/scripts/: preload.py  train.py
example-crs-webservice/crs-multilang/: .dockerignore  .gitattributes  .gitignore  Cargo.toml  Dockerfile  Dockerfile.c_archive  Dockerfile.jvm_archive  LICENSE  README.md  azure-other-services.yml  crs-image-version.txt  docker-build.sh  docker-img-push.sh  other-services.yml  push-images-for-ci.sh  requirements.txt  run.py
example-crs-webservice/crs-multilang/blob-gen/: README.md
example-crs-webservice/crs-multilang/blob-gen/multilang-llm-agent/: .flake8  .gitignore  .pre-commit-config.yaml  How-to-merge.md  README.md  ci.config  docker-compose.yml  env.ci  env.eval  env.shared  lsp.override.yml  pyproject.toml  requirements_docker.txt  results_summary.md  round1.html  round2.html  run_cgpa.py  test.java
example-crs-webservice/crs-multilang/constraint-gen/: .gitignore  prompt.txt  pyproject.toml  requirements.txt
example-crs-webservice/crs-multilang/constraint-gen/resolve/: __main__.py  inconsistency.py  prompting.py  sources.py  system-prompt.txt
example-crs-webservice/crs-multilang/constraint-gen/tests/: test_user_prompt.py
example-crs-webservice/crs-multilang/customgen/: .gitignore  README.md  build.sh  custom_ids.json  pyproject.toml  requirements.txt
example-crs-webservice/crs-multilang/customgen/proto/: customgen.proto
example-crs-webservice/crs-multilang/customgen/rust_client/: Cargo.toml  build.rs
example-crs-webservice/crs-multilang/dictgen/: README.md
example-crs-webservice/crs-multilang/e2e-eval/: README.md  analyze_docker_stat.py  analyze_mpstat.py  config.py  experiments.py  generate_zips.py  get_fds.sh  install_deps.sh  litellm_utils.py  requirements.txt  run_eval.py  run_prompts.py  run_server.py  update_submodules.sh  utils.py
example-crs-webservice/crs-multilang/e2e-eval/tests/: test_cpu_manager.py  test_litellm_utils.py  test_multiple_cycles.py  test_signal_handling.py  test_target_collision.py
example-crs-webservice/crs-multilang/examples/: .gitignore  concolic.template.json  gen-config.sh  seed_concolic.txt
example-crs-webservice/crs-multilang/function-tracer/tracer-c/: Dockerfile  Dockerfile.inline  docker-build-inline.sh
example-crs-webservice/crs-multilang/function-tracer/tracer-java/: Dockerfile  Dockerfile.inline
example-crs-webservice/crs-multilang/fuzzdb/: Cargo.toml  build.sh  pyproject.toml
example-crs-webservice/crs-multilang/fuzzdb/src/: db.rs  lib.rs  tests.rs  utils.rs
example-crs-webservice/crs-multilang/joern/: .gitignore  Dockerfile  pyproject.toml  run_joern_parse.sh
example-crs-webservice/crs-multilang/joern/mljoern/: client.py  server.py  test_client.py
example-crs-webservice/crs-multilang/libs/libCRS/: requirements.txt
example-crs-webservice/crs-multilang/libs/libFDP/: Cargo.toml  build_pymodule.sh  rustfmt.toml
example-crs-webservice/crs-multilang/lsp/: Dockerfile  download.py  main.py
example-crs-webservice/crs-multilang/reverser/: README.md
example-crs-webservice/crs-multilang/scripts/: .gitignore  check-instrumentation-output.py  docker-helper.py  filter-harness.py  lsp-prepare.sh  query-llm.py  test-concolic-basic.py  visualize-asc-nginx.sh  visualize-symstate-result.py
example-crs-webservice/crs-multilang/static/: cov_graph.html  style.css
example-crs-webservice/crs-multilang/testlang/: Cargo.toml  README.md  build.rs  build.sh  pyproject.toml
example-crs-webservice/crs-multilang/tests/: basic.list  create_conf.list  dict-input-gen.list  dictgen.list  lsp.list  reverser.list  symcc.list
example-crs-webservice/crs-multilang/uniafl/: .gitignore  Cargo.toml  README.md  build.rs
example-crs-webservice/crs-p3/: .dockerignore  README.md  docker-build.sh  docker-img-push.sh  main.py  pyproject.toml  supervisord.conf
example-crs-webservice/crs-patch/: .dockerignore  .env.example  .gitignore  LICENSE  NOTICE  README.md  docker-build.sh  docker-img-push.sh  docker-kill.sh  docker-run.sh  pyproject.toml  pytest.ini
example-crs-webservice/crs-patch/.githooks/: post-checkout  post-merge  post-rewrite  update-submodules.sh
example-crs-webservice/crs-patch/docs/: claude_like.md  eraser.md  martian.md  multi_retrieval.md  prism.md  vincent.md
example-crs-webservice/crs-patch/scripts/: detection_checker.py  make_detections.py  setup.py  test_bug_class_extraction.py  trigger_benchmark_workflow.sh  vcrpy_diagnosis.py
example-crs-webservice/crs-patch/tests/: conftest.py
example-crs-webservice/crs-sarif/llm-poc-gen/: README.md  init.sh  pyproject.toml  run_all_delta.py  run_gdb.sh
example-crs-webservice/crs-sarif/sarif/: pyproject.toml
example-crs-webservice/crs_webserver/: .dockerignore  Dockerfile  README.md  pyproject.toml
example-crs-webservice/crs_webserver/my_crs/: __init__.py
example-crs-webservice/crs_webserver/scripts/: tests.py
example-crs-webservice/crs_webserver/test/: test_crs_manager.py  test_litellm.py
(+3781 files in other folders)
