[project]
name = "p3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bitsandbytes>=0.45.5",
    "datasets>=3.6.0",
    "fastapi[standard]>=0.115.12",
    "openai>=1.82.0",
    "opentelemetry-api>=1.26.0",
    "opentelemetry-exporter-otlp>=1.26.0",
    "opentelemetry-sdk>=1.26.0",
    "opentelemetry-semantic-conventions-ai>=0.4.9",
    "peft>=0.15.2",
    "transformers>=4.52.3",
    "vllm==0.8.5.post1",
    "triton==3.2.0",
]

[dependency-groups]
dev = [
    "openai>=1.82.0",
    "pyright>=1.1.401",
    "requests>=2.32.3",
    "ruff>=0.11.11",
    "supervisor>=4.2.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["openai_compatible_server"]
