[tool.poetry]
name = "constraint-gen"
version = "0.1.0"
packages = [{ include = "resolve" }, { include = "tests" }]
description = "Placeholder description"
authors = ["John Smith <john@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9 <=3.13"
pydantic = "^2.11.4"
langchain-core = "^0.3.60"
langchain-openai = "^0.3.17"
langchain-community = "^0.3.24"
patch = "^1.16"
langchain-anthropic = "^0.3.13"

[tool.poetry.scripts]
resolve = "resolve.__main__:main"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
