[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mljoern"
version = "0.1.0"
description = "joern client and server for crs-multilang"
authors = []
requires-python = ">=3.10.4"
dependencies = [
    "requests>=2.25.0",
    "psutil>=7.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mljoern"]
