[package]
name = "uniafl"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
clap = { version = "4.5.16", features = ["derive"] }
hex = "0.4"
libafl = "0.13.2"
libafl_bolts = "0.13.2"
log = "0.4.21"
md5 = "0.7.0"
memchr = "2.7"
nix = "0.26"
regex = "1"
serde = "1.0.208"
serde_json = "1.0.127"
serde_yaml = "0.9.34"
sha1 = "0.10.6"
tempfile = "3.4"
byteorder = "1.4"
z3 = { path = "../libs/z3.rs/z3" }
z3-sys = { path = "../libs/z3.rs/z3-sys" }
goblin = "0.7"
addr2line = "0.17.0"
memmap2 = "0.5.3"
gimli = "0.26.1"
ahash = "0.7"
rand = { version = "0.8", features = ["small_rng"] }
bytes = "1.1"
thiserror = "2.0"
shared_memory = "0.12"
async-process = "2.3.0"
libfdp = { path = "../libs/libFDP/libfdp" }
testlang = { path = "../testlang" }
fuzzdb = { path = "../fuzzdb" }
customgen = { path = "../customgen/rust_client" }
tokio = { version = "1.41.0", features = ["full"] }
libc = "0.2.162"
num_enum = "0.7.3"
anyhow = "1.0.95"
moka = { version = "0.12", features = ["sync"] }
fs2 = "0.4.3"
dashmap = "6.1.0"
object = "0.36.7"
colored = "3.0.0"
sha2 = "0.10.8"
chrono = "0.4.39"
base64 = "0.22.1"
rangemap = "1.5"
wait-timeout = "0.2.1"
glob = "0.3"
indexmap = "2.8.0"
file-lock = "2.1.11"
proc-maps = "0.4.0"
timeout-readwrite = "0.4.0"
serde_cbor = "0.11.2"
backtrace = "0.3.74"
bitvec = "1.0.1"
walkdir = "2"
postcard = { version = "1.1.1", features = ["use-std"] }
rlimit = "0.10.2"
cgroups-rs = "0.3.4"
fslock = "0.2"

[features]
# Features to test the kernel executor
vmtest = []
vmtest-verbose = []
slowdown = []
profile_symstate = []
input_gen_logging = []
default = ["concolic_profiling"]
log = []
concolic_profiling = []
testlang-debug = ["log"]

[build-dependencies]
cc = "1.1"

[dev-dependencies]
glob = "0.3"

[[bin]]
name = "input_gen_runner"
path = "src/input_gen_runner.rs"

[[bin]]
name = "concolic_utils"
path = "src/concolic_utils.rs"
