[package]
name = "code-browser"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
default = ["server"]
server = []
standalone = ["indradb-lib/rocksdb-datastore"]
pyo3 = ["dep:pyo3"]

[lib]
name = "userspace_code_browser"
crate-type = ["cdylib"]

[[bin]]
name = "code-browser"
path = "src/main.rs"
required-features = ["standalone"]

[[bin]]
name = "code-browser-server"
path = "src/server.rs"
required-features = ["server"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.27", features = ["derive"] }
flate2 = "1.1.1"
indradb-lib = { version = "4.0.0" }
indradb-proto = "4.0.0"
lockfile = "0.4.0"
prost = { version = "0.13.5" }
pyo3 = { version = "0.23.4", features = ["extension-module"], optional = true }
rayon = "1.10.0"
regex = "1.11.1"
serde = "1.0.217"
serde_json = "1.0.138"
streaming-iterator = "0.1.9"
strum_macros = "0.27.0"
tar = "0.4.44"
tokio = { version = "1.43.0", features = ["rt"] }
tonic = "0.12.3"
tree-sitter = "0.24.7"
tree-sitter-c = "0.23.4"
uuid = { version = "1.12.1", features = ["v4", "v5"] }
walkdir = "2.5.0"

[build-dependencies]
tonic-build = "0.12.3"
