[package]
name = "libfdp"
version = "0.2.0"
edition = "2021"

[features]
default = []
debug = ["dep:fdp-reference"]

[dependencies]
byteorder = "1"
bytes = "1"
fdp-reference = { path = "../fdp-reference", optional = true }
memchr = "2.7"
simd_cesu8 = "1.0"
thiserror = "2.0"

[dev-dependencies]
fdp-reference = { path = "../fdp-reference" }
itertools = "0.14"
rand = "0.9"
