[package]
name = "concolicd"
version = "0.13.2"
edition = "2021"
build = "build.rs"

[[bin]]
name = "concolicd"
path = "src/server.rs"

[features]
default = ["no_std"]
no_std = []

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = true
panic = "abort"

[dependencies]
libafl = { path = "../LibAFL/libafl/", features = ["concolic_mutation"] }
libafl_bolts = { path = "../LibAFL/libafl_bolts/" }
clap = { version = "4.0", features = ["derive"] }
libc = "0.2.158"
symcc_runtime = { path = "../LibAFL/libafl_concolic/symcc_runtime"}
anyhow = "1.0.86"
which = "6.0"
tempfile = "3.12.0"
fs2 = "0.4.3"
bincode = "1.3.3"
serde = "1.0.210"
serde_json = "1.0.128"
z3 = { version = "0.12.0", features = ["static-link-z3"] }
tonic = "0.12.3"
prost = "0.13.3"
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
cmake = "0.1"
which = "4.4"
symcc_libafl = { path = "../LibAFL/libafl_concolic/symcc_libafl" }
tonic-build = "0.12.3"
