[package]
name = "libfuzzer"
version = "0.13.2"
edition = "2021"
build = "build.rs"

[lib]
name = "fuzzer"
path = "src/lib.rs"
crate-type = ["staticlib"]

[features]
default = ["no_std"]
no_std = []

[profile.dev]
debug = true 
opt-level = 0
panic = "abort"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = true
panic = "abort"

[dependencies]
libafl_bolts = { path = "../LibAFL/libafl_bolts/" }
libafl_targets = { path = "../LibAFL/libafl_targets/", features = [
  "sancov_pcguard_edges",
  "sancov_cmplog",
  "pointer_maps",
  "libfuzzer",
] }
libafl_cc = { path = "../LibAFL/libafl_cc/" }
clap = { version = "4.0", features = ["derive"] }
mimalloc = { version = "*", default-features = false }
libc = "0.2.158"
anyhow = "1.0.86"
which = "6.0"
tempfile = "3.12.0"
fs2 = "0.4.3"
bincode = "1.3.3"
serde = "1.0.210"
serde_json = "1.0.128"
prost = "0.13.3"
tokio = { version = "1.4.5", features = ["full"] }
duplicate = "2.0.0"
rdkafka = "0.37.0"
libafl = { version = "0.13.2", path = "../LibAFL/libafl"}
byteorder = "1.5.0"
chrono = "0.4"
crossbeam-channel = "0.5.13"
hex = "0.4"
log = "0.4"
memmap2 = "0.9.4"
once_cell = "1.18"
rand = "0.8"
sha2 = "0.10"
thiserror = "1.0"
zeromq = "0.4.1"
signal-hook = { version = "0.3", features = ["extended-siginfo"] }
env_logger = "0.10"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
cmake = "0.1"
which = "4.4"
prost-build = "0.13"
